# instant-interlocking

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  README.md
code_generation/: Cargo.toml  README.md
code_generation/examples/: ixl.rs
code_generation/src/: driveway.rs  generate.rs  main.rs
driveway_generator/: pyproject.toml  requirements.txt
driveway_generator/driveway_generator/: main.py
driveway_generator/src/: main.py
dummy_driveway_generator/src/: main.py
grpc_control_station/: Cargo.toml  README.md  build.rs
grpc_control_station/examples/: server.rs
grpc_control_station/proto/: ixl.proto
grpc_control_station/src/: lib.rs
planpro-importer/: Scheibenberg.ppxml  import.py
planpro-importer/railwayroutegenerator/: generator.py
rasta-sys/: Cargo.toml  CompileOptions.cmake  build.rs
rasta-sys/examples/: scip_localhost.rs
rasta-sys/examples/config/: rasta_client1_local_kex.cfg  rasta_client1_local_tls.cfg  rasta_client2_local_kex.cfg  rasta_client2_local_tls.cfg  rasta_server_local_kex.cfg  rasta_server_local_tls.cfg
track_element/: Cargo.toml
track_element/examples/: driveway.rs  generate.rs  routes.rs
track_element/src/: Driveway.rs  additional_signal.rs  controlStation.rs  control_station.rs  driveway.rs  lib.rs  point.rs  pyRoute.rs  signal.rs  test.rs  vacancy_section.rs
ui/: README.md  app.py  interlockings.sql  pyproject.toml  utils.py
ui/templates/: index.html
