[package]
name = "code_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0.47"
structopt = "0.3.26"
thiserror = "1.0.37"
serde = "1.0.147"
serde_json = "1.0.87"
anyhow = "1.0.66"
cargo = "0.66.0"

[dependencies.track_element]
path = "../track_element"
