[package]
name = "code_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.3.0"
quote = "1.0.21"
proc-macro2 = "1.0.47"
thiserror = "1.0.37"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.66"
clap = { version = "4.1.4", features = ["derive"] }

[dependencies.track_element]
path = "../track_element"
