[package]
name = "grpc_control_station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["ws"] }
axum-extra = { version = "0.5.0", features = ["spa"] }
futures = "0.3.26"
prost = "0.11.6"
serde_json = "1.0.92"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["time"] }
tonic = { version = "0.8.3", features = ["gzip"] }
tonic-web = "0.5.0"
tower-http = { version = "0.3.5", features = ["cors"] }
track_element = { git = "https://github.com/simulate-digital-rail/track_element"}

[build-dependencies]
npm_rs = "1.0.0"
tonic-build = "0.8.4"

[dev-dependencies]
clap = "4.1.6"
tokio = { version = "1.25.0", features = ["full"] }
