[package]
name = "track_element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
anyhow = "1.0.66"

[dependencies.uuid]
version = "1.2.2"
features = ["v4"]

[dependencies.pyo3]
version = "0.17.3"
features = ["auto-initialize"]
