[tool.poetry]
name = "codegen_ui"
version = "0.1.0"
description = "Web user interface for ixl code generation"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
requests = "^2.28.2"
orm-importer = {git = "https://github.com/simulate-digital-rail/orm-importer.git"}
interlocking-exporter = {git = "https://github.com/simulate-digital-rail/interlocking-exporter"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
